src/tests/snapshots/niri__tests__window_opening__check_target_size@fsF-dwU-dhU-wfsBU.snap
---
source: src/tests/window_opening.rs
description: "want fullscreen: BU\nconfig:\nwindow-rule {\n    open-fullscreen false\n    default-column-width {  }\n    default-window-height {  }\n}"
expression: snapshot
snapshot_kind: text
---
initial configure:
size: 0 × 688, bounds: 1248 × 688, states: []

post-map configures:
size: 1 × 688, bounds: 1248 × 688, states: [Activated]
